--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -537,7 +537,7 @@
                     </div>
                 </div>
             </div>
-        {%- when '4' -%}
+        {%- when '4' -%} {%- comment -%}Blancsom Theme - Use Type #4 Style #1 {%- endcomment -%}
             <div class="header__content" data-js-mobile-sticky>
                 {{ info_line_html }}
                 <div class="header__line-top header__line--colorize-2 position-relative d-flex px-10 px-lg-0 py-lg-6" data-js-desktop-sticky>
