--- a/snippets/popup-cart.liquid
+++ b/snippets/popup-cart.liquid
@@ -14,7 +14,7 @@
         </div>
         {%- if settings.cart_show_free_shipping -%}
             <div class="popup-cart__free-shipping my-20">
-                {% render 'free-shipping' %}
+                {% render 'blancsom-free-shipping' %}
             </div>
         {%- endif -%}
         <div class="popup-cart__buttons mt-15">
