--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -85,7 +85,7 @@
                         </div>
                         {%- if settings.cart_show_free_shipping -%}
                             <div class="pt-20">
-                                {% render 'free-shipping' %}
+                                {% render 'blancsom-free-shipping' %}
                             </div>
                         {%- endif -%}
                         <div class="d-flex pt-25">
