--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -84,12 +84,12 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
 }
   // Breadcrumbs
   .breadcrumbs {
+    margin-bottom: 1rem;
     ul {
-      margin-left: -2px;
-      margin-right: -2px;
       li {
         text-transform: uppercase;
         letter-spacing: $spacing;
+        font-size: 0.7rem;
       }
     }
   }
