--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,5 +1,4 @@
-{% include 'breadcrumbs' %}
-{% section 'product' %}
-{%- if settings.product_info_page_show_related_products -%}
+{% include 'breadcrumbs' %}{% section 'product' %}
+{%- if settings.product_ino_page_show_related_products -%}
     {% section 'carousel-related-products' %}
 {%- endif -%}
