--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -505,4 +505,13 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
     background: none;
   }
 }
+// Collection Sidebar
+.collection-control__button-sidebar {
+  i > svg {
+    min-width: unset;
+    min-height: unset;
+    width: 16px;
+    transform: translateY(1px);
+  }
+}
 }
