--- a/snippets/blancsom-product-page-inquiry-btn.liquid
+++ b/snippets/blancsom-product-page-inquiry-btn.liquid
@@ -32,7 +32,7 @@
         <div class="product-page-info__button-add-to-cart mb-10">
         <button class="btn btn--full btn--status js-popup-button" data-js-popup-button="product-inquiry">
             <span class="d-flex flex-center"
-            ><span class="btn__text">Product Inquiry</span></span
+            ><span class="btn__text">Notify Me</span></span
             >
         </button>
         </div>
