--- a/sections/one-product.liquid
+++ b/sections/one-product.liquid
@@ -189,6 +189,9 @@
                           {%- assign price_save_money = price_save | money -%}
                           {%- assign price_save_procent = price | times: 100 | divided_by: compare_at_price | minus: 100 | times: -1 -%}
                           {{ 'products.product.price_sale_details_html' | t: price: price_save_money, procent: price_save_procent }}
+                          {% unless settings.product_show_compare_at_price %}
+                          / List Price {{ compare_at_price | money  }}
+                        {% endunless %}
                         {%- endif -%}
                       </p>
                     {%- endif -%}
