--- a/snippets/product-page-get-main.liquid
+++ b/snippets/product-page-get-main.liquid
@@ -67,6 +67,7 @@
             </div>
         </div>
     </div>
+    {% include 'blancsom-product-tab-script' %}
 {%- when '4' -%}
     <div class="product-page-main"{% include 'product-get-attributes' %} data-js-product-clone-id="footbar">
         <div class="row">
