Convert JS to ES5

--- a/snippets/blancsom-product-tab-script.liquid
+++ b/snippets/blancsom-product-tab-script.liquid
@@ -1,8 +1,9 @@
 <script>
-    const sizeChart = document.getElementById("ProductSizeChart");
-    if (sizeChart) {
-      const sizeChartContent = sizeChart.innerHTML;
-      const sizeTab = document.getElementById("ProductTab1");
+    "use strict";
+  var sizeChart = document.getElementById("ProductSizeChart");
+  if (sizeChart) {
+    var sizeChartContent = sizeChart.innerHTML;
+    var sizeTab = document.getElementById("ProductTab1");
       if (sizeTab) {
         sizeTab.innerHTML = sizeChartContent;
       }
