Notify Me Design Change

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -549,4 +549,17 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
     transform: translateY(1px);
   }
 }
+// Popup Notify Me
+.popup__body {
+  .notify-me {
+    h4 {
+      font-weight: 800;
+      font-size: 1.5rem;
+    }
+    h6 {
+      text-transform: uppercase;
+      font-size: 1.5rem;
+    }
+  }
+}
 }
