Change Product Tab Block Name

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -152,9 +152,19 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
         display: none; // Hide images in descirption
       }
     }
-    #ProductTabDescription #ProductSizeChart {
-      display: none;
+    #ProductTabDescription {
+      #ProductSizeChart {
+        display: none;
+      }
     }
+    #ProductTab2 {
+      ul {
+        list-style: none;
+        li {
+          margin-bottom: 0.5em;
+          line-height: 1.2;
+        }
+      }
     .shipping-info {
       $info-color: $color-blancsom-base;
       padding: 0.5rem;
