Linked Designer name to Vendor

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -157,6 +157,11 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
         display: none;
       }
     }
+    .table-product-sizes {
+      td:first-child {
+        white-space: nowrap;
+      }
+    }
     #ProductTab2 {
       ul {
         list-style: none;
