--- a/sections/home-builder.liquid
+++ b/sections/home-builder.liquid
@@ -764,11 +764,11 @@
 },
 {
 "value": "type-2-2",
-"label": "Type #2 v2"
+"label": "Type #2 v2 (Type 2 with Button)"
 },
 {
 "value": "type-2-3",
-"label": "Type #2 v3"
+"label": "Type #2 v3 (Type 2 with Button)"
 },
 {
 "value": "type-2-4",
