Display 6cols on extra-wide screen(added)

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -295,6 +295,14 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
       }
     }
   }
+  .blancsom-search {
+    @media (min-width: 1920px) {
+      .blancsom-xxl-col {
+        flex: 0 0 16.6666%;
+        max-width: 16.6666%;
+      }
+    }
+  }
   .pagination {
     .no-product {
       background: none;
